ソルバーメニュー追加

--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -24,6 +24,8 @@
 
 ## 項目定義
 
+### メイン画面
+
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
 | 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
@@ -31,53 +33,35 @@
 | 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
 | 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
 
-### 個人ソルバー一覧（セクション）
+### 個人ソルバー管理エリア
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| ソルバーID | テキスト | O | 文字列 |  |  |  | | |
-| ソルバー名 | テキスト | O | 文字列 |  |  |  | | |
-| メールアドレス | テキスト | O | 文字列 |  |  |  | | |
-| 電話番号 | テキスト | O | 文字列 |  |  |  | | |
-| スキル概要 | テキスト | O | 文字列 |  |  |  | 最大200文字 | 省略表示 |
-| 単価 | テキスト | O | 数値 |  |  |  | | XX万円/月形式 |
-| ステータス | セレクトボックス | I | 文字列 | ○ | 未選定 | 選択してください | 未選定/選定済/非選定 | コードマスタ参照 |
-| 選択 | チェックボックス | I | 真偽値 |  | false |  | | |
+| ＋ボタン | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
+| －ボタン | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
+| 編集ボタン | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
+| 個人ソルバー一覧 | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
 
-### ソルバー候補一覧（セクション）
+### ソルバー候補管理エリア
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 候補ID | テキスト | O | 文字列 |  |  |  | | |
-| 候補者名 | テキスト | O | 文字列 |  |  |  | | |
-| 登録日 | テキスト | O | 日付 |  |  |  | | YYYY/MM/DD形式 |
-| ステータス | テキスト | O | 文字列 |  |  |  | | 審査中/承認済/却下 |
-| 選択 | チェックボックス | I | 真偽値 |  | false |  | | |
+| ＋ボタン | ボタン | I | - |  |  |  | | ソルバー候補追加 |
+| －ボタン | ボタン | I | - |  |  |  | | ソルバー候補削除 |
+| 編集ボタン | ボタン | I | - |  |  |  | | ソルバー候補編集 |
+| ソルバー候補一覧 | リスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
 
-### 応募ソルバー追加ポップアップ（個人ソルバー）
+### 個人ソルバー追加ポップアップ
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 検索キーワード | テキストボックス | I | 文字列 |  |  | キーワードを入力 | 最大100文字 | |
-| スキル | テキストボックス | I | 文字列 |  |  | スキルを入力 | 最大100文字 | |
-| 稼働可能 | チェックボックス | I | 真偽値 |  | false |  | | |
-| ソルバーID | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| ソルバー名 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| メールアドレス | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| スキル概要 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| 選択 | ラジオボタン | I | 文字列 |  |  |  | | 単一選択 |
+| 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバーを選択してください | | 登録済み個人ソルバーのプルダウン |
 
 ### ソルバー候補追加ポップアップ
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 検索キーワード | テキストボックス | I | 文字列 |  |  | キーワードを入力 | 最大100文字 | 既存候補選択時のみ |
-| ステータス | セレクトボックス | I | 文字列 |  | 全て | 選択してください | 審査中/承認済/却下 | 既存候補選択時のみ |
-| 候補ID | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| 候補者名 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| 登録日 | テキスト | O | 日付 |  |  |  | | 検索結果表示 |
-| ステータス | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
-| 選択 | ラジオボタン | I | 文字列 |  |  |  | | 単一選択 |
+| ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバー候補を選択してください | | 登録済みソルバー候補のプルダウン |
 
 ## バリデーション
 
@@ -96,47 +80,43 @@
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
-| 個人ソルバー＋ | ボタン | - | 活性 | ポップアップ表示 |
-| ソルバー候補＋ | ボタン | - | 活性 | ポップアップ表示 |
-| 編集 | ボタン | /solvers/{solverId} | 活性 | 別タブで開く |
-| 詳細 | ボタン | /solver-candidates/{candidateId} | 活性 | 別タブで開く |
+| ＋（個人ソルバー） | ボタン | - | 活性 | 個人ソルバー追加ポップアップ表示 |
+| －（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化 |
+| 編集（個人ソルバー） | ボタン | /solvers/{solverId} | 非活性 | ソルバー選択時に活性化、別タブで開く |
+| ＋（ソルバー候補） | ボタン | - | 活性 | ソルバー候補追加ポップアップ表示 |
+| －（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化 |
+| 編集（ソルバー候補） | ボタン | /solver-candidates/{candidateId} | 非活性 | 候補選択時に活性化、別タブで開く |
 | 変更する | ボタン | - | 活性 | 更新処理実行 |
 | 一覧へ戻る | リンク | /project-requirements | 活性 | |
 | キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
 
-### 応募ソルバー追加ポップアップ
+### 個人ソルバー追加ポップアップ
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
-| 既存ソルバーを選択 | ラジオボタン | - | 活性 | デフォルト選択 |
-| 検索 | ボタン | - | 活性 | |
 | 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
-| 閉じる | ボタン | - | 活性 | |
+| キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
 
 ### ソルバー候補追加ポップアップ
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
-| 既存候補を選択 | ラジオボタン | - | 活性 | デフォルト選択 |
-| 新規候補を追加 | ラジオボタン | - | 活性 | |
-| 検索 | ボタン | - | 活性 | 既存候補選択時のみ |
-| 追加 | ボタン | - | 非活性 | 候補選択時に活性化 |
-| 新規登録 | ボタン | /solver/application | 非活性 | 新規候補選択時に活性化、別タブ |
-| 閉じる | ボタン | - | 活性 | |
+| 追加 | ボタン | - | 非活性 | ソルバー候補選択時に活性化 |
+| キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
 
 ## イベント定義
 
 | イベント | 処理概要 | 異常時の処理 | 備考 |
 |----------|----------|--------------|------|
 | 画面初期表示 | 要件IDを元に応募ソルバー情報を取得 | エラーメッセージを画面上部に表示 | |
-| 個人ソルバー＋クリック | 応募ソルバー追加ポップアップを表示 | - | |
-| ソルバー候補＋クリック | ソルバー候補追加ポップアップを表示 | - | |
-| ポップアップ内検索 | 条件に合うソルバー/候補を検索表示 | 該当なしメッセージ表示 | |
-| ポップアップ追加 | 選択したソルバーを画面に追加 | エラーメッセージ表示 | 重複チェックあり |
-| 新規登録クリック | 別タブで新規個人ソルバー申請画面を開く | - | 案件コード自動入力 |
-| ステータス変更 | ソルバーのステータスを変更 | - | 選定済み数をリアルタイム更新 |
+| ＋ボタンクリック（個人ソルバー） | 個人ソルバー追加ポップアップを表示 | - | |
+| －ボタンクリック（個人ソルバー） | 選択した個人ソルバーを削除 | 確認ダイアログ表示 | |
+| 編集ボタンクリック（個人ソルバー） | 別タブで個人ソルバー編集画面を開く | - | |
+| ＋ボタンクリック（ソルバー候補） | ソルバー候補追加ポップアップを表示 | - | |
+| －ボタンクリック（ソルバー候補） | 選択したソルバー候補を削除 | 確認ダイアログ表示 | |
+| 編集ボタンクリック（ソルバー候補） | 別タブでソルバー候補編集画面を開く | - | |
+| ポップアップ追加 | 選択したソルバーを一覧に追加 | エラーメッセージ表示 | 重複チェックあり |
 | 変更するクリック | 応募ソルバー情報を更新 | バリデーションエラー表示 | |
-| 編集/詳細クリック | 別タブで詳細画面を開く | - | |
 
 ## 利用DB
 
@@ -166,27 +146,26 @@
 2. 応募ソルバー画面へ遷移（要件IDを受け取る）
 3. 初期表示処理
    - APIコール（GET /api/project-requirements/{requirementId}/applied-solvers）
-   - 既存の応募ソルバー一覧を取得
-   - 個人ソルバーとソルバー候補を分けて表示
-4. ソルバーの追加/編集
-   - ポップアップからソルバーを選択追加
-   - ステータスの変更
-   - 不要なソルバーの削除
+   - 既存の応募ソルバー情報を取得
+   - 個人ソルバー管理エリアとソルバー候補管理エリアを表示
+4. ソルバーの管理
+   - ＋ボタンでポップアップからソルバーを追加
+   - －ボタンで選択したソルバーを削除
+   - 編集ボタンで別タブで詳細編集
 5. 「変更する」ボタンクリック
    - 更新内容をAPIに送信
    - 成功時は完了メッセージ表示
 
-### ポップアップでのソルバー追加フロー
-1. 「＋」ボタンクリック
-2. ポップアップ表示
-3. 既存ソルバーから選択の場合
-   - 検索条件入力
-   - 検索実行（GET /api/solvers）
-   - 一覧から選択
-   - 追加ボタンクリック
-   - メイン画面に反映
-4. 新規ソルバー候補追加の場合
-   - 「新規ソルバー候補を追加」選択
-   - 「新規登録」ボタンクリック
-   - 別タブで申請画面が開く
-   - 申請完了後、元タブに戻る
+### 個人ソルバー追加フロー
+1. 「＋」ボタンクリック（個人ソルバー管理エリア）
+2. 個人ソルバー追加ポップアップ表示
+3. プルダウンから登録済み個人ソルバーを選択
+4. 「追加」ボタンクリック
+5. メイン画面の個人ソルバー一覧に追加
+
+### ソルバー候補追加フロー
+1. 「＋」ボタンクリック（ソルバー候補管理エリア）
+2. ソルバー候補追加ポップアップ表示
+3. プルダウンから登録済みソルバー候補を選択
+4. 「追加」ボタンクリック
+5. メイン画面のソルバー候補一覧に追加
