応募ソルバー修正

--- a/pg/iret/FO/ソルバーメニュー画面_設計書.md
+++ b/pg/iret/FO/ソルバーメニュー画面_設計書.md
@@ -8,7 +8,6 @@
 
 ソルバー関連機能への入口となるメニュー画面。
 法人ソルバーを選択することで、その法人に関連する個人ソルバー、ソルバー候補、月次更新、人材要件などの各種機能にアクセスできる。
-法人ソルバー権限のユーザーがログイン後に最初にアクセスする画面となる。
 
 ## 画面デザイン
 
@@ -24,17 +23,10 @@
 
 ## 項目定義
 
-### 画面ヘッダー部
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 画面タイトル | テキスト | O | 文字列 |  | ソルバーメニュー |  | | 固定表示 |
-| 法人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | 法人ソルバーを選択 | | ログインユーザーの権限に応じて選択肢を制御 |
-
-### メニュー項目
-
-| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 法人ソルバー選択 | セレクトボックス | I/O | 文字列 | ○ |  | 法人ソルバーを選択 | | ログインユーザーの権限に応じて選択肢を制御 |
 | 個人ソルバーセクション | テキスト | O | 文字列 |  | 個人ソルバー |  | | セクションタイトル |
 | 個人ソルバー一覧 | リンク | O | - |  |  |  | | メニュー項目 |
 | 新規個人ソルバー申請 | リンク | O | - |  |  |  | | メニュー項目 |
