--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -24,43 +24,26 @@
 
 ## 項目定義
 
-### メイン画面
-
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
+| **メイン画面** | | | | | | | | |
 | 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
 | 案件名 | テキスト | O | 文字列 |  |  |  | | |
 | 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
 | 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
-
-### 個人ソルバー管理エリア
-
-| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|----------|-----|----------|------|--------|------------------|----------|------|
-| ＋ボタン | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
-| －ボタン | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
-| 編集ボタン | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
+| **個人ソルバー管理エリア** | | | | | | | | |
+| ＋ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
+| －ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
+| 編集ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
 | 個人ソルバー一覧 | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
-
-### ソルバー候補管理エリア
-
-| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|----------|-----|----------|------|--------|------------------|----------|------|
-| ＋ボタン | ボタン | I | - |  |  |  | | ソルバー候補追加 |
-| －ボタン | ボタン | I | - |  |  |  | | ソルバー候補削除 |
-| 編集ボタン | ボタン | I | - |  |  |  | | ソルバー候補編集 |
+| **ソルバー候補管理エリア** | | | | | | | | |
+| ＋ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補追加 |
+| －ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補削除 |
+| 編集ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補編集 |
 | ソルバー候補一覧 | リスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
-
-### 個人ソルバー追加ポップアップ
-
-| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| **個人ソルバー追加ポップアップ** | | | | | | | | |
 | 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバーを選択してください | | 登録済み個人ソルバーのプルダウン |
-
-### ソルバー候補追加ポップアップ
-
-| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| **ソルバー候補追加ポップアップ** | | | | | | | | |
 | ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバー候補を選択してください | | 登録済みソルバー候補のプルダウン |
 
 ## バリデーション
