--- a/pg/iret/FO/ソルバーメニュー画面_設計書.md
+++ b/pg/iret/FO/ソルバーメニュー画面_設計書.md
@@ -27,6 +27,7 @@
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
 | 法人ソルバー選択 | セレクトボックス | I/O | 文字列 | ○ |  | 法人ソルバーを選択 | | ログインユーザーの権限に応じて選択肢を制御 |
+| 法人ソルバー情報詳細 | リンク | O | - |  |  |  | | 選択した法人ソルバーの詳細画面へのリンク |
 | 個人ソルバーセクション | テキスト | O | 文字列 |  | 個人ソルバー |  | | セクションタイトル |
 | 個人ソルバー一覧 | リンク | O | - |  |  |  | | メニュー項目 |
 | 新規個人ソルバー申請 | リンク | O | - |  |  |  | | メニュー項目 |
