--- a/pg/iret/FO/ソルバーメニュー画面_設計書.md
+++ b/pg/iret/FO/ソルバーメニュー画面_設計書.md
@@ -7,7 +7,7 @@
 ## 機能概要
 
 ソルバー関連機能への入口となるメニュー画面。
-法人ソルバーを選択することで、その法人に関連する個人ソルバー、ソルバー候補、月次更新、人材要件などの各種機能にアクセスできる。
+APTユーザーは法人ソルバーを選択することで、法人ソルバーユーザーは自社が自動選択された状態で、関連する個人ソルバー、ソルバー候補、月次更新、人材要件などの各種機能にアクセスできる。
 
 ## 画面デザイン
 
@@ -18,15 +18,15 @@
 | ロール | 条件 |
 |--------|------|
 | APT | 全機能利用可能、全法人ソルバー選択可能 |
-| 法人ソルバー | 自社のみ選択可能、自社関連機能のみ利用可能 |
-| 個人ソルバー | アクセス不可 |
+| 法人ソルバー | 自社が自動選択済み、変更不可、自社関連機能のみ利用可能 |
+| 個人ソルバー | 人材要件機能のみ利用可能、法人ソルバー選択なし |
 
 ## 項目定義
 
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 法人ソルバー選択 | セレクトボックス | I/O | 文字列 | ○ |  | 法人ソルバーを選択 | | ログインユーザーの権限に応じて選択肢を制御 |
+| 法人ソルバー選択 | セレクトボックス | I/O | 文字列 | ○ |  | 法人ソルバーを選択 | | APTのみ選択可能、法人ソルバーは自社固定、個人ソルバーは非表示 |
 | 法人ソルバー情報詳細 | リンク | O | - |  |  |  | | 選択した法人ソルバーの詳細画面へのリンク |
 | 個人ソルバーセクション | テキスト | O | 文字列 |  | 個人ソルバー |  | | セクションタイトル |
 | 個人ソルバー一覧 | リンク | O | - |  |  |  | | メニュー項目 |
@@ -43,7 +43,7 @@
 
 | 画面項目名 | チェック場所 | チェック内容 | エラーメッセージ | 備考 |
 |------------|--------------|--------------------------|--------------------------|---------|
-| 法人ソルバー選択 | F | 必須チェック | 法人ソルバーを選択してください | メニュー項目クリック時 |
+| 法人ソルバー選択 | F | 必須チェック | 法人ソルバーを選択してください | APTユーザーがメニュー項目クリック時 |
 
 * F：フロントエンド
 * B：バックエンド
@@ -52,19 +52,19 @@
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
-| 法人ソルバー情報詳細 | リンク | /solver-corporations/{corporationId} | 非活性 | 法人ソルバー選択時に活性化 |
-| 個人ソルバー一覧 | リンク | /solvers | 非活性 | 法人ソルバー選択時に活性化 |
-| 新規個人ソルバー申請 | リンク | /solver/application | 非活性 | 法人ソルバー選択時に活性化 |
-| ソルバー候補一覧 | リンク | /solver-candidates | 非活性 | 法人ソルバー選択時に活性化 |
-| 新規ソルバー候補申請 | リンク | /solver-candidate/application | 非活性 | 法人ソルバー選択時に活性化 |
-| 稼働率・単価更新 | リンク | /solver/monthly-update | 非活性 | 法人ソルバー選択時に活性化 |
-| 人材要件 | リンク | /project-requirements | 非活性 | 法人ソルバー選択時に活性化 |
+| 法人ソルバー情報詳細 | リンク | 法人ソルバー詳細画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| 個人ソルバー一覧 | リンク | 個人ソルバー一覧画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| 新規個人ソルバー申請 | リンク | 個人ソルバー申請画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| ソルバー候補一覧 | リンク | ソルバー候補一覧画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| 新規ソルバー候補申請 | リンク | ソルバー候補申請画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| 稼働率・単価更新 | リンク | 稼働率・単価更新画面 | 非活性 | 法人ソルバー選択時に活性化 |
+| 人材要件 | リンク | 人材要件一覧画面 | 非活性 | 法人ソルバー選択時に活性化 |
 
 ## イベント定義
 
 | イベント | 処理概要 | 異常時の処理 | 備考 |
 |----------|----------|--------------|------|
-| 画面初期表示 | ログインユーザーの権限を確認し、選択可能な法人ソルバーリストを取得 | エラーメッセージを画面上部に表示 | |
+| 画面初期表示 | ログインユーザーの権限を確認し、初期状態を設定 | エラーメッセージを画面上部に表示 | APT：法人選択可、法人ソルバー：自社選択済み、個人ソルバー：人材要件のみ |
 | 法人ソルバー選択 | 選択した法人ソルバーIDをセッションに保存、メニュー項目を活性化 | - | |
 | メニュー項目クリック | 法人ソルバー未選択チェック後、各画面へ遷移 | 法人ソルバー選択を促すメッセージ表示 | |
 
@@ -86,11 +86,12 @@
 ### 初期表示フロー
 1. ユーザーがソルバーメニュー画面にアクセス
 2. ログインユーザーの権限を確認
-3. 権限に応じた法人ソルバーリストを取得
-   - APT権限: 全法人ソルバー
-   - 法人ソルバー権限: 自社のみ
-4. 法人ソルバー選択ドロップダウンにリストを設定
-5. メニュー項目は非活性状態で表示
+3. 権限に応じた初期状態を設定
+   - APT権限: 全法人ソルバーリストを取得、選択可能状態
+   - 法人ソルバー権限: 自社を自動選択、変更不可
+   - 個人ソルバー権限: 法人ソルバー選択非表示、人材要件のみ表示
+4. 法人ソルバー権限の場合、メニュー項目を活性化
+5. APT権限の場合、法人選択までメニュー項目は非活性
 
 ### 法人ソルバー選択フロー
 1. ドロップダウンから法人ソルバーを選択
