--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -26,25 +26,21 @@
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| **メイン画面** | | | | | | | | |
-| 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
-| 案件名 | テキスト | O | 文字列 |  |  |  | | |
-| 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
-| 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
 | **個人ソルバー管理エリア** | | | | | | | | |
 | ＋ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
 | －ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
 | 編集ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
-| 個人ソルバー一覧 | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
+| 選択済み個人ソルバーリスト | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
 | **ソルバー候補管理エリア** | | | | | | | | |
 | ＋ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補追加 |
 | －ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補削除 |
 | 編集ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補編集 |
-| ソルバー候補一覧 | リスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
+| 選択済みソルバー候補リスト | リスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
 | **個人ソルバー追加ポップアップ** | | | | | | | | |
 | 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバーを選択してください | | 登録済み個人ソルバーのプルダウン |
 | **ソルバー候補追加ポップアップ** | | | | | | | | |
 | ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバー候補を選択してください | | 登録済みソルバー候補のプルダウン |
+| ＋ボタン | ボタン | I | - |  |  |  | | ソルバー候補新規申請画面へ |
 
 ## バリデーション
 
@@ -84,6 +80,7 @@
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
+| ＋ | ボタン | ソルバー候補申請画面 | 活性 | 新規申請画面へ別タブで遷移 |
 | 追加 | ボタン | - | 非活性 | ソルバー候補選択時に活性化 |
 | キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
 
@@ -99,6 +96,7 @@
 | －ボタンクリック（ソルバー候補） | 選択したソルバー候補を削除 | 確認ダイアログ表示 | |
 | 編集ボタンクリック（ソルバー候補） | 別タブでソルバー候補編集画面を開く | - | |
 | ポップアップ追加 | 選択したソルバーを一覧に追加 | エラーメッセージ表示 | 重複チェックあり |
+| ＋ボタンクリック（ポップアップ内） | 別タブでソルバー候補申請画面を開く | - | ソルバー候補追加ポップアップ内 |
 | 変更するクリック | 応募ソルバー情報を更新 | バリデーションエラー表示 | |
 
 ## 利用DB
