--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -26,12 +26,19 @@
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
+| **メイン画面** | | | | | | | | |
+| 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
+| 案件名 | テキスト | O | 文字列 |  |  |  | | |
+| 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
+| 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
 | **個人ソルバー管理エリア** | | | | | | | | |
+| 個人ソルバー | テキスト | O | 文字列 |  | 個人ソルバー |  | | エリアラベル |
 | ＋ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
 | －ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
 | 編集ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
 | 選択済み個人ソルバーリスト | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
 | **ソルバー候補管理エリア** | | | | | | | | |
+| ソルバー候補 | テキスト | O | 文字列 |  | ソルバー候補 |  | | エリアラベル |
 | ＋ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補追加 |
 | －ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補削除 |
 | 編集ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補編集 |
@@ -55,31 +62,24 @@
 
 ## リンク・ボタン項目
 
-### メイン画面
-
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
+| **メイン画面** | | | | |
+| 変更する | ボタン | - | 活性 | 更新処理実行 |
+| 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
+| キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
+| **個人ソルバー管理エリア** | | | | |
 | ＋（個人ソルバー） | ボタン | - | 活性 | 個人ソルバー追加ポップアップ表示 |
 | －（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化 |
-| 編集（個人ソルバー） | ボタン | /solvers/{solverId} | 非活性 | ソルバー選択時に活性化、別タブで開く |
-| ＋（ソルバー候補） | ボタン | - | 活性 | ソルバー候補追加ポップアップ表示 |
-| －（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化 |
-| 編集（ソルバー候補） | ボタン | /solver-candidates/{candidateId} | 非活性 | 候補選択時に活性化、別タブで開く |
-| 変更する | ボタン | - | 活性 | 更新処理実行 |
-| 一覧へ戻る | リンク | /project-requirements | 活性 | |
-| キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
-
-### 個人ソルバー追加ポップアップ
-
-| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|----------|--------|-------------------------|------|
+| 編集（個人ソルバー） | ボタン | 個人ソルバー詳細画面 | 非活性 | ソルバー選択時に活性化、別タブで開く |
+| **個人ソルバー追加ポップアップ** | | | | |
 | 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
 | キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
-
-### ソルバー候補追加ポップアップ
-
-| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|----------|--------|-------------------------|------|
+| **ソルバー候補管理エリア** | | | | |
+| ＋（ソルバー候補） | ボタン | - | 活性 | ソルバー候補追加ポップアップ表示 |
+| －（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化 |
+| 編集（ソルバー候補） | ボタン | ソルバー候補詳細画面 | 非活性 | 候補選択時に活性化、別タブで開く |
+| **ソルバー候補追加ポップアップ** | | | | |
 | ＋ | ボタン | ソルバー候補申請画面 | 活性 | 新規申請画面へ別タブで遷移 |
 | 追加 | ボタン | - | 非活性 | ソルバー候補選択時に活性化 |
 | キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
