--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -8,7 +8,6 @@
 
 人材要件に対する応募ソルバーを管理する画面。
 既存の個人ソルバーやソルバー候補から選択、または新規でソルバー候補を追加することができる。
-選定済み人数の管理やステータス変更も可能。
 
 ## 画面デザイン
 
@@ -26,36 +25,35 @@
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| **メイン画面** | | | | | | | | |
 | 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
-| 案件名 | テキスト | O | 文字列 |  |  |  | | |
-| 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
-| 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
+| 案件URL | リンク | O | 文字列 |  |  |  | | 外部サイトへのリンク |
+| タイトル | テキスト | O | 文字列 |  |  |  | | |
 | **個人ソルバー管理エリア** | | | | | | | | |
-| 個人ソルバー | テキスト | O | 文字列 |  | 個人ソルバー |  | | エリアラベル |
 | ＋ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
 | －ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
 | 編集ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
-| 選択済み個人ソルバーリスト | リスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
+| 選択済み個人ソルバーリスト | テキスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
 | **ソルバー候補管理エリア** | | | | | | | | |
-| ソルバー候補 | テキスト | O | 文字列 |  | ソルバー候補 |  | | エリアラベル |
 | ＋ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補追加 |
 | －ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補削除 |
 | 編集ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補編集 |
-| 選択済みソルバー候補リスト | リスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
+| 選択済みソルバー候補リスト | テキスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
 | **個人ソルバー追加ポップアップ** | | | | | | | | |
-| 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバーを選択してください | | 登録済み個人ソルバーのプルダウン |
+| 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済み個人ソルバーのプルダウン |
+| 追加ボタン | ボタン | I | - |  |  |  | | 選択したソルバーを追加 |
+| キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 | **ソルバー候補追加ポップアップ** | | | | | | | | |
-| ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | ソルバー候補を選択してください | | 登録済みソルバー候補のプルダウン |
-| ＋ボタン | ボタン | I | - |  |  |  | | ソルバー候補新規申請画面へ |
+| ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済みソルバー候補のプルダウン |
+| ＋ボタン（新規ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補新規申請画面へ |
+| 追加ボタン | ボタン | I | - |  |  |  | | 選択した候補を追加 |
+| キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 
 ## バリデーション
 
 | 画面項目名 | チェック場所 | チェック内容 | エラーメッセージ | 備考 |
-|------------|--------------|--------------------------|--------------------------|---------|
-| ステータス | F/B | 必須チェック | ステータスを選択してください | 選定済みを選択時のみ |
-| 選択人数 | B | 上限チェック | 必要人数を超えて選定することはできません | |
-| ステータス整合性 | B | 論理チェック | 選定済みステータスは必要人数まで | |
+|------------|--------------|--------------------------|--------------------------|---------||
+| 個人ソルバー選択 | F | 必須チェック | ソルバーを選択してください | 個人ソルバー追加ポップアップ内 |
+| ソルバー候補選択 | F | 必須チェック | ソルバー候補を選択してください | ソルバー候補追加ポップアップ内 |
 
 * F：フロントエンド
 * B：バックエンド
@@ -71,14 +69,14 @@
 | **個人ソルバー管理エリア** | | | | |
 | ＋（個人ソルバー） | ボタン | - | 活性 | 個人ソルバー追加ポップアップ表示 |
 | －（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化 |
-| 編集（個人ソルバー） | ボタン | 個人ソルバー詳細画面 | 非活性 | ソルバー選択時に活性化、別タブで開く |
+| 編集（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化、ポップアップ表示 |
 | **個人ソルバー追加ポップアップ** | | | | |
 | 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
 | キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
 | **ソルバー候補管理エリア** | | | | |
 | ＋（ソルバー候補） | ボタン | - | 活性 | ソルバー候補追加ポップアップ表示 |
 | －（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化 |
-| 編集（ソルバー候補） | ボタン | ソルバー候補詳細画面 | 非活性 | 候補選択時に活性化、別タブで開く |
+| 編集（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化、ポップアップ表示 |
 | **ソルバー候補追加ポップアップ** | | | | |
 | ＋ | ボタン | ソルバー候補申請画面 | 活性 | 新規申請画面へ別タブで遷移 |
 | 追加 | ボタン | - | 非活性 | ソルバー候補選択時に活性化 |
@@ -91,48 +89,33 @@
 | 画面初期表示 | 要件IDを元に応募ソルバー情報を取得 | エラーメッセージを画面上部に表示 | |
 | ＋ボタンクリック（個人ソルバー） | 個人ソルバー追加ポップアップを表示 | - | |
 | －ボタンクリック（個人ソルバー） | 選択した個人ソルバーを削除 | 確認ダイアログ表示 | |
-| 編集ボタンクリック（個人ソルバー） | 別タブで個人ソルバー編集画面を開く | - | |
+| 編集ボタンクリック（個人ソルバー） | 個人ソルバー追加ポップアップを表示 | - | 選択したソルバーを入れ替え |
 | ＋ボタンクリック（ソルバー候補） | ソルバー候補追加ポップアップを表示 | - | |
 | －ボタンクリック（ソルバー候補） | 選択したソルバー候補を削除 | 確認ダイアログ表示 | |
-| 編集ボタンクリック（ソルバー候補） | 別タブでソルバー候補編集画面を開く | - | |
+| 編集ボタンクリック（ソルバー候補） | ソルバー候補追加ポップアップを表示 | - | 選択した候補を入れ替え |
 | ポップアップ追加 | 選択したソルバーを一覧に追加 | エラーメッセージ表示 | 重複チェックあり |
 | ＋ボタンクリック（ポップアップ内） | 別タブでソルバー候補申請画面を開く | - | ソルバー候補追加ポップアップ内 |
 | 変更するクリック | 応募ソルバー情報を更新 | バリデーションエラー表示 | |
 
 ## 利用DB
 
-| 場所（NPF/ PP） | テーブル名 | CRUD | 備考 |
-|-----------------|------------|------|------|
-| PP | solver_applications | CRU | 応募ソルバー情報の管理 |
-| PP | solvers | R | 個人ソルバー情報の参照 |
-| PP | solver_candidates | R | ソルバー候補情報の参照 |
-| PP | projects | R | プロジェクト情報の参照 |
-| NPF | 案件マスタ | R | 案件情報の参照 |
 
 ## 利用API
 
-- `GET /api/project-requirements/{requirementId}/applied-solvers`: 応募ソルバー一覧の取得
-- `GET /api/solvers`: 個人ソルバー検索（ポップアップ用）
-  - クエリパラメータ: keyword, skills, available
-- `GET /api/solver-candidates`: ソルバー候補検索（ポップアップ用）
-  - クエリパラメータ: keyword, status
-- `POST /api/project-requirements/{requirementId}/applied-solvers`: 応募ソルバーの追加
-- `PUT /api/project-requirements/{requirementId}/applied-solvers/{solverId}`: 応募ソルバーのステータス更新
-- `DELETE /api/project-requirements/{requirementId}/applied-solvers/{solverId}`: 応募ソルバーの削除
 
 ## シーケンス・フロー
 
 ### メインフロー
 1. 人材要件詳細画面から「変更する」ボタンクリック
-2. 応募ソルバー画面へ遷移（要件IDを受け取る）
+2. 応募ソルバー画面へ遷移（人材要件IDを受け取る）
 3. 初期表示処理
-   - APIコール（GET /api/project-requirements/{requirementId}/applied-solvers）
+   - APIコール
    - 既存の応募ソルバー情報を取得
-   - 個人ソルバー管理エリアとソルバー候補管理エリアを表示
+   - 画面を表示
 4. ソルバーの管理
    - ＋ボタンでポップアップからソルバーを追加
    - －ボタンで選択したソルバーを削除
-   - 編集ボタンで別タブで詳細編集
+   - 編集ボタンで別タブで詳細
 5. 「変更する」ボタンクリック
    - 更新内容をAPIに送信
    - 成功時は完了メッセージ表示
