--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -25,7 +25,7 @@
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
+| 案件コード | テキスト | O | 文字列 |  |  |  | |  |
 | 案件URL | リンク | O | 文字列 |  |  |  | | 外部サイトへのリンク |
 | タイトル | テキスト | O | 文字列 |  |  |  | | |
 | **個人ソルバー管理エリア** | | | | | | | | |
@@ -40,12 +40,12 @@
 | 選択済みソルバー候補リスト | テキスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
 | **個人ソルバー追加ポップアップ** | | | | | | | | |
 | 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済み個人ソルバーのプルダウン |
-| 追加ボタン | ボタン | I | - |  |  |  | | 選択したソルバーを追加 |
+| 確認ボタン | ボタン | I | - |  |  |  | | 選択したソルバーを追加 |
 | キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 | **ソルバー候補追加ポップアップ** | | | | | | | | |
 | ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済みソルバー候補のプルダウン |
 | ＋ボタン（新規ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補新規申請画面へ |
-| 追加ボタン | ボタン | I | - |  |  |  | | 選択した候補を追加 |
+| 確認ボタン | ボタン | I | - |  |  |  | | 選択した候補を追加 |
 | キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 
 ## バリデーション
