--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -25,28 +25,20 @@
 
 | 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
 |------------|----------|-----|----------|------|--------|------------------|----------|------|
-| 案件コード | テキスト | O | 文字列 |  |  |  | |  |
-| 案件URL | リンク | O | 文字列 |  |  |  | | 外部サイトへのリンク |
+| **メイン画面** | | | | | | | | |
+| 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
+| 案件URL | テキスト | O | 文字列 |  |  |  | | 外部サイトへのリンク |
 | タイトル | テキスト | O | 文字列 |  |  |  | | |
 | **個人ソルバー管理エリア** | | | | | | | | |
-| ＋ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー追加 |
-| －ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー削除 |
-| 編集ボタン（個人ソルバー） | ボタン | I | - |  |  |  | | 個人ソルバー編集 |
+| 個人ソルバー | テキスト | O | 文字列 |  | 個人ソルバー |  | | エリアラベル |
 | 選択済み個人ソルバーリスト | テキスト | O | - |  |  |  | | 追加された個人ソルバーの表示 |
 | **ソルバー候補管理エリア** | | | | | | | | |
-| ＋ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補追加 |
-| －ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補削除 |
-| 編集ボタン（ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補編集 |
+| ソルバー候補 | テキスト | O | 文字列 |  | ソルバー候補 |  | | エリアラベル |
 | 選択済みソルバー候補リスト | テキスト | O | - |  |  |  | | 追加されたソルバー候補の表示 |
 | **個人ソルバー追加ポップアップ** | | | | | | | | |
 | 個人ソルバー選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済み個人ソルバーのプルダウン |
-| 確認ボタン | ボタン | I | - |  |  |  | | 選択したソルバーを追加 |
-| キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 | **ソルバー候補追加ポップアップ** | | | | | | | | |
 | ソルバー候補選択 | セレクトボックス | I | 文字列 | ○ |  | テキストを入力（補完あり） | | 登録済みソルバー候補のプルダウン |
-| ＋ボタン（新規ソルバー候補） | ボタン | I | - |  |  |  | | ソルバー候補新規申請画面へ |
-| 確認ボタン | ボタン | I | - |  |  |  | | 選択した候補を追加 |
-| キャンセルボタン | ボタン | I | - |  |  |  | | ポップアップを閉じる |
 
 ## バリデーション
 
@@ -62,6 +54,26 @@
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
+| **メイン画面** | | | | |
+| 案件URL | リンク | 外部サイト | 活性 | 別タブで開く |
+| 変更する | ボタン | - | 活性 | 更新処理実行 |
+| 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
+| キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
+| **個人ソルバー管理エリア** | | | | |
+| ＋（個人ソルバー） | ボタン | - | 活性 | 個人ソルバー追加ポップアップ表示 |
+| －（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化 |
+| 編集（個人ソルバー） | ボタン | - | 非活性 | ソルバー選択時に活性化、ポップアップ表示 |
+| **ソルバー候補管理エリア** | | | | |
+| ＋（ソルバー候補） | ボタン | - | 活性 | ソルバー候補追加ポップアップ表示 |
+| －（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化 |
+| 編集（ソルバー候補） | ボタン | - | 非活性 | 候補選択時に活性化、ポップアップ表示 |
+| **個人ソルバー追加ポップアップ** | | | | |
+| 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
+| キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
+| **ソルバー候補追加ポップアップ** | | | | |
+| ＋ | ボタン | ソルバー候補申請画面 | 活性 | 新規申請画面へ別タブで遷移 |
+| 追加 | ボタン | - | 非活性 | ソルバー候補選択時に活性化 |
+| キャンセル | ボタン | - | 活性 | ポップアップを閉じる |
 | **メイン画面** | | | | |
 | 変更する | ボタン | - | 活性 | 更新処理実行 |
 | 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
