--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -44,7 +44,9 @@
 | 画面項目名 | チェック場所 | チェック内容 | エラーメッセージ | 備考 |
 |------------|--------------|--------------------------|--------------------------|---------|
 | 個人ソルバー選択 | F | 必須チェック | ソルバーを選択してください | 個人ソルバー追加ポップアップ内 |
+| 個人ソルバー選択 | F | 重複チェック | 既に追加されています | 個人ソルバー追加ポップアップ内 |
 | ソルバー候補選択 | F | 必須チェック | ソルバー候補を選択してください | ソルバー候補追加ポップアップ内 |
+| ソルバー候補選択 | F | 重複チェック | 既に追加されています | ソルバー候補追加ポップアップ内 |
 
 * F：フロントエンド
 * B：バックエンド
